@@ -56,6 +56,8 @@ blacklist_filter = BlacklistFilter()
 monitor = xbmc.Monitor()
 window = kodi.Window(10000)
 
+logos = dict()
+
 
 def grouped(items):
     args = [iter(items)] * 3
@@ -64,10 +66,13 @@ def grouped(items):
 
 def notify_live():
     notify = kodi.get_setting('live_notify') == 'true'
-    audible = False
+    audible = group = start = False
     if notify:
         audible = kodi.get_setting('live_notify_audible') == 'true'
-    return notify, audible
+        start = kodi.get_setting('live_notify_at_start') == 'true'
+        if start:
+            group = kodi.get_setting('live_notify_group_start') == 'true'
+    return notify, audible, start, group
 
 
 def get_followed_streams(twitch_api):
@@ -94,7 +99,10 @@ def get_followed_streams(twitch_api):
     filtered = \
         blacklist_filter.by_type(filtered, Keys.STREAMS, game_key=Keys.GAME, list_type='game')
     colorized = []
+    global logos
     for stream in filtered[Keys.STREAMS]:
+        if not logos.get(stream[Keys.CHANNEL][Keys._ID]):
+            logos[stream[Keys.CHANNEL][Keys._ID]] = stream[Keys.CHANNEL][Keys.LOGO]
         if stream.get(Keys.STREAM_TYPE) == 'watch_party':
             color = get_vodcast_color()
             if stream[Keys.CHANNEL].get(Keys.DISPLAY_NAME):
@@ -102,7 +110,9 @@ def get_followed_streams(twitch_api):
             if stream[Keys.CHANNEL].get(Keys.NAME):
                 stream[Keys.CHANNEL][Keys.NAME] = u'[COLOR={color}]{name}[/COLOR]'.format(name=stream[Keys.CHANNEL][Keys.NAME], color=color)
         colorized.append(stream)
-    followed_tuples = [(stream[Keys.CHANNEL][Keys._ID], stream[Keys.CHANNEL][Keys.NAME], stream[Keys.CHANNEL][Keys.DISPLAY_NAME]) for stream in colorized]
+    followed_tuples = [(stream[Keys.CHANNEL][Keys._ID], stream[Keys.CHANNEL][Keys.NAME],
+                        stream[Keys.CHANNEL][Keys.DISPLAY_NAME], stream[Keys.GAME])
+                       for stream in colorized]
     return followed_tuples
 
 
@@ -115,7 +125,7 @@ def get_online_followed():
     if result:
         return literal_eval(result)
     else:
-        return result
+        return []
 
 
 # ---------------------------------------------------------------------------------------
@@ -127,6 +137,7 @@ notification_duration = 4500
 notification_sleep = (float(notification_duration) / 1000.0) - 0.5  # shift by half second to avoid multiple audible notification
 timestamp = None
 abort = False
+first_run = True
 
 log_utils.log('Service: Start', log_utils.LOGNOTICE)
 
@@ -134,9 +145,11 @@ player = TwitchPlayer()
 
 while not monitor.abortRequested():
     time_diff = get_stamp_diff(timestamp)
+    if first_run and (timestamp is not None):
+        first_run = False
     if (timestamp is None) or (time_diff >= delay_time):
         timestamp = str(datetime.now())
-        do_notification, make_audible = notify_live()
+        do_notification, make_audible, start, group_start = notify_live()
         if do_notification:
             try:
                 twitch = api.Twitch()
@@ -149,35 +162,38 @@ while not monitor.abortRequested():
                     if current_live is None: break  # if aborted during api requests
                     if current_live:
                         current_online = get_online_followed()
-                        if not current_online:
-                            log_utils.log('Service: Now online |%s|' % current_live, log_utils.LOGDEBUG)
-                            set_online_followed(value=current_live)
-                            names = [display_name for _id, name, display_name in current_live]
-                            triplets = grouped(names)
-                            for followed_names in triplets:
-                                message = ', '.join(followed_names)
-                                message = message.rstrip(', ').rstrip(', ')
-                                kodi.notify(i18n('currently_live'), message, duration=notification_duration, sound=make_audible)
-                                if monitor.waitForAbort(notification_sleep):
-                                    abort = True
-                                    break
-                        else:
-                            log_utils.log('Service: Was online |%s|' % current_online, log_utils.LOGDEBUG)
-                            current_online = [match for match in current_online if match in current_live]
-                            new_online = [match for match in current_live if match not in current_online]
-                            log_utils.log('Service: New online |%s|' % new_online, log_utils.LOGDEBUG)
-                            current_online += new_online
-                            log_utils.log('Service: Now online |%s|' % current_online, log_utils.LOGDEBUG)
-                            set_online_followed(current_online)
-                            names = [display_name if display_name else name for _id, name, display_name in new_online]
-                            triplets = grouped(names)
-                            for followed_names in triplets:
-                                message = ', '.join(followed_names)
-                                message = message.rstrip(', ').rstrip(', ')
-                                kodi.notify(i18n('went_live'), message, duration=notification_duration, sound=make_audible)
-                                if monitor.waitForAbort(notification_sleep):
-                                    abort = True
-                                    break
+                        if not first_run or start:
+                            if first_run and group_start:
+                                log_utils.log('Service: Now online |%s|' % current_live, log_utils.LOGDEBUG)
+                                set_online_followed(value=current_live)
+                                names = [display_name for _id, name, display_name, game in current_live]
+                                triplets = grouped(names)
+                                for followed_names in triplets:
+                                    message = ', '.join(followed_names)
+                                    message = message.rstrip(', ').rstrip(', ')
+                                    kodi.notify(i18n('currently_live'), message, duration=notification_duration, sound=make_audible)
+                                    if monitor.waitForAbort(notification_sleep):
+                                        abort = True
+                                        break
+                            else:
+                                log_utils.log('Service: Was online |%s|' % current_online, log_utils.LOGDEBUG)
+                                current_online = [match for match in current_online if match in current_live]
+                                new_online = [match for match in current_live if match not in current_online]
+                                current_online = [match for match in current_online if not any(match[0] == cmp_match[0] for cmp_match in new_online)]
+                                log_utils.log('Service: New online |%s|' % new_online, log_utils.LOGDEBUG)
+                                current_online += new_online
+                                log_utils.log('Service: Now online |%s|' % current_online, log_utils.LOGDEBUG)
+                                set_online_followed(current_online)
+
+                                for followed_tuple in new_online:
+                                    display_name = followed_tuple[2] if followed_tuple[2] else followed_tuple[1]
+                                    game = '' if not followed_tuple[3] else followed_tuple[3]
+                                    icon = None if not logos.get(followed_tuple[0]) else logos.get(followed_tuple[0])
+                                    kodi.notify(display_name, i18n('started_streaming') % (display_name, game), duration=notification_duration, sound=make_audible, icon_path=icon)
+                                    if monitor.waitForAbort(notification_sleep):
+                                        abort = True
+                                        break
+
     if monitor.waitForAbort(sleep_time) or abort:
         break
 
