@@ -59,6 +59,8 @@
         <setting label="30204" type="lsep"/>
         <setting label="30211" id="live_notify" type="bool" default="false"/>
         <setting label="30205" id="live_notify_audible" type="bool" default="false" enable="eq(-1,true)" visible="eq(-1,true)"/>
+        <setting label="30232" id="live_notify_at_start" type="bool" default="true" enable="eq(-2,true)" visible="eq(-2,true)"/>
+        <setting label="30233" id="live_notify_group_start" type="bool" default="false" enable="eq(-1,true)" visible="eq(-1,true)"/>
 
         <setting label="30090" type="lsep"/>
         <setting label="30189" id="add_language" type="action" action="RunPlugin(plugin://$ID/?mode=edit_languages&amp;action=add)"/>
